[package]
name = "home-ipv6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = { version = "0.31.0", features = ["std"]}
pnet_macros = "0.31.0"
pnet_macros_support = "0.31.0"
serde = {version = "1", features=["derive"]}
serde_yaml = "0.9.13"
log = "0.4.17"
env_logger = "0.9.0"